# promise-bench

./: .gitignore  README.md  environment-prodigy.yaml  environment.yaml  install.sh  pyproject.toml
config/: config.yaml  eval.yaml  pipeline.yaml
data/: preference_scores.json
data/dataset/: intrinsic.csv  ligand-induced.csv  protein-induced.csv  seq_cluster_to_answer_map.json  valid_pairs.json
src/: __init__.py
src/curation/: README.md  __main__.py  generate_alignment_tasks.py  make_pairs.py  pipeline.py  run.py
src/curation/pipeline/: __init__.py  auxillary_filters.py  cluster_by_tmscore.py  create_msa.py  curate_sets.py  filter_seq_clusters.py  filter_xtal.py  pairwise_tm_multiprocessing.py  prepare_inputs_gemmi.py  process_metal.py  run_prodigy.py  select_representative.py  subsets.py  types.py
src/curation/utils/: _config.py  _data_root.py  _geometry.py  _pdb_helpers.py  check_scores.py  constants.py  download_mmcif.py  find_cluster.py  pdb_utils.py  typedefs.py
src/eval/: README.md  __init__.py  _config.py  cif_to_renumbered_pdb.py  esm_run.py  merge_all.py
src/eval/align/: check_align_status.py  extract_ca_from_cif.py  generate_alignment_tasks.py  nurikit_align_batch.py  split_alignment_jobs.py  struct_align_batch.py
src/eval/distogram/: calc_distogram_confbench.py  calc_distogram_loss.py  calc_reference_distogram_diff.py  check_distogram_diff_results.py  check_distogram_results.py  collect_distograms.py  extract_reference_cb.py  generate_distogram_calc_jobs.py  generate_distogram_diff_jobs.py  path_utils.py
src/utils/: _config.py
(+18 files in other folders)
